--- a/C#Vezba9V2/cSharpVezba9V2/cSharpVezba9V2.csproj
+++ b/C#Vezba9V2/cSharpVezba9V2/cSharpVezba9V2.csproj
@@ -45,6 +45,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Merenje.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Service References\JavniServis\Reference.cs">
