--- a/C#Vezba9V2/cSharpVezba9V2/cSharpVezba9V2MernaStanica/App.config
+++ b/C#Vezba9V2/cSharpVezba9V2/cSharpVezba9V2MernaStanica/App.config
@@ -3,4 +3,16 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
+    <system.serviceModel>
+        <bindings>
+            <basicHttpBinding>
+                <binding name="BasicHttpBinding_ISistemServis" />
+            </basicHttpBinding>
+        </bindings>
+        <client>
+            <endpoint address="http://localhost:8732/MeteoServis/SistemServis"
+                binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_ISistemServis"
+                contract="SistemServis.ISistemServis" name="BasicHttpBinding_ISistemServis" />
+        </client>
+    </system.serviceModel>
 </configuration>
